# transmission-og

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  NEWS.md  README.md  aclocal.m4  autogen.sh  code_style.sh  configure  configure.ac  transmission-gtk.spec.in  transmission-og.rc.in  update-version-h.sh
.tx/: config
cli/: CMakeLists.txt  Makefile.am  Makefile.in  cli.c  transmission-og-cli.1
cmake/: TrMacros.cmake  Transmission.rc.in
daemon/: CMakeLists.txt  Makefile.am  Makefile.in  daemon-posix.c  daemon-win32.c  daemon.c  daemon.h  my-valgrind.sh  transmission-og-daemon.1  transmission-og-daemon.service
extras/: Makefile.in  git_show_deps.sh  rpc-spec.txt  send-email-when-torrent-done.sh
gtk/: CMakeLists.txt  Makefile.am  Makefile.in  actions.c  actions.h  conf.c  conf.h  details.c  details.h  dialogs.c  dialogs.h  favicon.c  favicon.h  file-list.c  file-list.h  filter.c  filter.h  hig.c  hig.h  icons.c  icons.h  main.c  makemeta-ui.c  makemeta-ui.h  msgwin.c  msgwin.h  my-valgrind.sh  notify.c  notify.h  open-dialog.c  open-dialog.h  relocate.c  relocate.h  stats.c  stats.h  torrent-cell-renderer.c  torrent-cell-renderer.h  tr-core.c  tr-core.h  tr-icon.c  (+13 more)
gtk/icons/: Makefile.am  Makefile.in
installers/: README.md  (+1 more)
libtransmission/: CMakeLists.txt  ConvertUTF.c  ConvertUTF.h  Makefile.am  Makefile.in  announcer-common.h  announcer-http.c  announcer-udp.c  announcer.c  announcer.h  bandwidth.c  bandwidth.h  bitfield-test.c  bitfield.c  bitfield.h  blocklist-test.c  blocklist.c  blocklist.h  cache.c  cache.h  clients-test.c  clients.c  clients.h  completion.c  completion.h  crypto-test.c  crypto-utils-cyassl.c  crypto-utils-fallback.c  crypto-utils-openssl.c  crypto-utils-polarssl.c  crypto-utils.c  crypto-utils.h  crypto.c  crypto.h  error-test.c  error.c  error.h  fdlimit.c  fdlimit.h  file-posix.c  (+123 more)
macosx/: AboutWindow.xib  AboutWindowController.h  AboutWindowController.m  AddMagnetWindowController.h  AddMagnetWindowController.m  AddWindowController.h  AddWindowController.m  BadgeView.h  BadgeView.m  Badger.h  Badger.m  BlocklistDownloader.h  BlocklistDownloader.m  BlocklistDownloaderViewController.h  BlocklistDownloaderViewController.m  BlocklistScheduler.h  BlocklistScheduler.m  BonjourController.h  BonjourController.m  ButtonToolbarItem.h  ButtonToolbarItem.m  CMakeLists.txt  ColorTextField.h  ColorTextField.m  Controller.h  Controller.m  CreatorWindowController.h  CreatorWindowController.m  Credits.rtf  Defaults.plist  DragOverlayView.h  DragOverlayView.m  DragOverlayWindow.h  DragOverlayWindow.m  ExpandedPathToIconTransformer.h  ExpandedPathToIconTransformer.m  ExpandedPathToPathTransformer.h  ExpandedPathToPathTransformer.m  FileListNode.h  FileListNode.m  (+108 more)
macosx/QuickLookPlugin/: CMakeLists.txt  GeneratePreviewForURL.m  Info.plist.in  QuickLookPlugin-Info.plist  main.c
macosx/QuickLookPlugin/fr_CA.lproj/: Localizable.strings
macosx/Sparkle.framework/Versions/B/: Autoupdate  Sparkle
macosx/Sparkle.framework/Versions/B/XPCServices/Downloader.xpc/Contents/MacOS/: Downloader
macosx/Sparkle.framework/Versions/B/XPCServices/Installer.xpc/Contents/MacOS/: Installer
macosx/Sparkle.framework/Versions/B/_CodeSignature/: CodeResources
macosx/TransmissionHelp/: index.html
macosx/TransmissionHelp/html/: FAQ.html  Index2.html  Speed.html  check.html  gettingstarted.html  network.html  peers.html  pffirewall.html  pfrouter.html  portforward.html  remote.html  scripts.html  tracker.html  troubleshoot.html  usingt.html
macosx/VDKQueue/: VDKQueue.h  VDKQueue.m
macosx/da.lproj/: Localizable.strings  MainMenu.xib
macosx/de.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.xib  PrefsWindow.xib
macosx/en.lproj/: Localizable.strings  MainMenu.xib
macosx/es.lproj/: Localizable.strings  MainMenu.xib
macosx/fr.lproj/: Localizable.strings  MainMenu.xib
macosx/fr_CA.lproj/: InfoPlist.strings  Localizable.strings
macosx/it.lproj/: Localizable.strings  MainMenu.xib
macosx/it_IT.lproj/: Localizable.strings
macosx/nl.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.xib
macosx/pt.lproj/: Localizable.strings
macosx/pt_BR.lproj/: Localizable.strings
macosx/pt_PT.lproj/: Localizable.strings  MainMenu.xib
macosx/ru.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.xib
macosx/tr.lproj/: InfoPlist.strings  Localizable.strings  MainMenu.xib
qt/: AboutDialog.cc  AboutDialog.h  AboutDialog.ui  AddData.cc  AddData.h  Application.cc  Application.h  BaseDialog.h  CMakeLists.txt  ColumnResizer.cc  ColumnResizer.h  ComInteropHelper.cc  ComInteropHelper.h  CustomVariantType.h  DBusInteropHelper.cc  DBusInteropHelper.h  DetailsDialog.cc  DetailsDialog.h  FaviconCache.cc  FaviconCache.h  FileTreeDelegate.cc  FileTreeDelegate.h  FileTreeItem.cc  FileTreeItem.h  FileTreeModel.cc  FileTreeModel.h  FileTreeView.cc  FileTreeView.h  FilterBar.cc  FilterBar.h  FilterBarComboBox.cc  FilterBarComboBox.h  FilterBarComboBoxDelegate.cc  FilterBarComboBoxDelegate.h  Filters.cc  Filters.h  Formatter.cc  Formatter.h  FreeSpaceLabel.cc  FreeSpaceLabel.h  (+73 more)
qt/translations/: transmission_af.ts  transmission_ca.ts  transmission_ca@valencia.ts  transmission_da.ts  transmission_de.ts  transmission_el.ts  transmission_en.ts  transmission_es.ts  transmission_eu.ts  transmission_fi.ts  transmission_fr.ts  transmission_fr_CA.ts  transmission_hu.ts  transmission_id.ts  transmission_it.ts  transmission_it_IT.ts  transmission_ja.ts  transmission_ka.ts  transmission_kk.ts  transmission_ko.ts  transmission_lt.ts  transmission_nb.ts  transmission_nl.ts  transmission_pl.ts  transmission_pt.ts  transmission_pt_BR.ts  transmission_pt_PT.ts  transmission_ru.ts  transmission_sl.ts  transmission_sv.ts  transmission_tr.ts  transmission_uk.ts  transmission_zh_CN.ts  transmission_zh_HK.ts  transmission_zh_TW.ts
utils/: CMakeLists.txt  Makefile.am  Makefile.in  create.c  edit.c  remote.c  show.c  transmission-og-create.1  transmission-og-edit.1  transmission-og-remote.1  transmission-og-show.1
(+142 files in other folders)
